src/styles/shop.css
body,
html {
  margin: 0;
  overflow: hidden;
  height: 100%;
}
#shop-page {
  background-image: url("https://d369ls1rsdbvlu.cloudfront.net/pictures/stars.png");
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.shop-page__content-container {
  width: 100%;
  height: 80%;
}

.nav {
  position: absolute;
  top: 0;
  box-sizing: border-box;
  padding: 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 70px;
  z-index: 2;
}

.cart {
  z-index: 3;
  width: 35px;
  outline: none;
  font-size: 30px;
  font-family: "VCR";
  color: white;
  transition: 0.3s;
}

.cart:hover {
  opacity: 0.5;
  transition: 0.3s;
  cursor: pointer;
}

.shop-page__container {
  display: flex;
  height: 100%;
  width: 80%;
  color: white;
  justify-content: space-evenly;
  width: 100%;
  overflow: hidden;
}

.shop-page__container-responsive,
.shop-page__container-responsive-product {
  display: flex;
  height: 100%;
  width: 80%;
  color: white;
  justify-content: space-evenly;
  width: 100%;
}

.shop-page__container-responsive-product {
  height: 100%;
}

.return {
  background-color: transparent;
  outline: none;
  border: none;
  font-family: "VCR", sans-serif;
  font-weight: bold;
  text-decoration: none;
  color: white;
  font-size: 30px;
  transition: 0.5s;
  padding: 0;
}

.return:hover {
  color: rgba(250, 250, 250, 0.5);
  transition: 0.2s;
  cursor: pointer;
}

.return__invisible {
  display: none;
}

.product-image {
  width: 350px;
  margin-top: 50px;
}

.prod {
  padding-bottom: 30px;
}

.product-info__absolute {
  position: absolute;
  bottom: 100px;
  left: -50px;
  font-family: "VCR", sans-serif;
}

.product-info__status-available {
  display: block;
}

.product-info__status-unavailable {
  display: none;
}

.product-description-hidden {
  display: none;
}

.product-description {
  height: 200px;
  overflow: auto;
  padding: 10px;
}

.product-description p {
  margin: 0;
}

.product-description table {
  width: 100%;
}

.product-container {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 30%;
  height: 80%;
}

.product-container:hover {
  cursor: pointer;
}

.shop-page__column-one,
.shop-page__product-column {
  width: 700px;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
  height: 100%;
}

.shop-page__column-one__image {
  width: 800px;
  height: 80%;
}

.player-toggle {
  z-index: 3;
  background-color: transparent;
  border: none;
  outline: none;
  color: white;
  position: absolute;
  bottom: 20px;
  right: 20px;
}

.fas {
  font-size: 30px;
  background-color: rgba(0, 0, 0, 0.75);
  padding: 10px;
}

.player-toggle:hover {
  cursor: pointer;
}

.product {
  width: 400px;
  margin-top: 100px;
}
.product:hover {
  width: 425px;
  transition: 0.5s;
  cursor: pointer;
}

.zoom {
  width: 35%;
}

.column-image {
  width: 1000px;
}

.image-button {
  position: absolute;
  font-family: "VCR";
  font-size: 25px;
  background-color: transparent;
  outline: none;
  border: none;
  color: white;
}

.image-button:hover {
  color: rgba(250, 250, 250, 0.5);
  cursor: pointer;
}

.image-button__sub {
  left: 3px;
}

.image-button__add {
  right: 3px;
}

.shop-page__column-one__button {
  position: absolute;
  background: transparent;
  border: none;
  outline: none;
  color: white;
  font-family: "VCR";
  font-weight: bold;
  font-size: 50px;
  transition: 0.5s;
  z-index: 3;
}

.shop-page__column-one__button:hover {
  color: rgba(250, 250, 250, 0.5);
  transition: 0.5s;
  cursor: pointer;
}

.button__add {
  right: 200px;
}
.button__sub {
  left: 200px;
}
.product-info__title {
  margin: 5px 0;
}

/* .item-number__identifier {
  position: absolute;
  font-family: "VCR";
} */

.product {
  /* position: absolute; */
  transition: 0.5s;
}

.dimensions {
  margin-bottom: 20px;
}

.dimensions-shopify {
  display: none;
}

.product-table {
  width: 100%;
}

.description-invisible {
  display: none;
}

.description-visible {
  display: block;
}

.shop-page__column-two {
  z-index: 2;
  display: flex;
  flex-direction: column;
  font-family: "VCR", sans-serif;
  font-weight: lighter;
  justify-content: flex-start;
  margin-top: 125px;
  height: 80%;
  width: 33%;
  text-transform: uppercase;
}

.shop-page__column-two-section {
  height: auto;
}

.variant-button__container {
  display: flex;
  width: 80%;
  margin-top: 20px;
}

.variant {
  padding: 5px;
  outline: none;
  border: 2px white solid;
  background-color: black;
  color: white;
  font-size: 20px;
  font-family: "VCR";
  width: 50px;
  height: 50px;
  transition: 0.3s;
}

.variant:hover {
  cursor: pointer;
  background-color: white;
  color: black;
  transition: 0.3s;
}

.selected-variant {
  padding: 5px;
  outline: none;
  border: 2px white solid;
  font-size: 20px;
  font-family: "VCR";
  width: 50px;
  height: 50px;
  transition: 0.3s;
  cursor: pointer;
  background-color: white;
  color: black;
}

.out-of-stock__variant {
  padding: 5px;
  outline: none;
  border: 2px black solid;
  font-size: 20px;
  font-family: "VCR";
  width: 50px;
  height: 50px;
  cursor: default;
  background-color: rgb(41, 41, 41);
  color: black;
}

.shop-other__images {
  width: 425px;
  margin-top: 20px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  object-fit: cover;
  object-position: top;
  justify-content: center;
}

.unselected-image {
  width: 55px;
  height: 55px;
  margin: 10px;
  cursor: pointer;
  object-fit: cover;
  object-position: top center;
}

.selected-image {
  width: 55px;
  height: 55px;
  margin: 10px;
  opacity: 0.5;
  transition: 0.2s;
  object-fit: cover;
  object-position: top center;
}

.buy-button {
  outline: none;
  background-color: black;
  color: white;
  font-family: "VCR";
  margin: 20px 0px 5px 0px;
  width: 100%;
  border: white solid 2px;
  padding: 15px 20px 15px 20px;
  transition: 0.5s;
  text-align: center;
  font-size: 20px;
}
/* ... */

